# thinkledger-web

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docs.md  main.py  mypy.ini  package-lock.json  package.json  pyproject.toml  ruff.toml  setup.py  tailwind.config.js  tide.toml
.github/workflows/: test.yml
content/: benefits.py  faq.py  features.py  support_categories.py
database/postgres/: postgres_db.py  postgres_schema.py
database/redis/: redis.py
middleware/: authentication.py  rate_limiter.py
routes/: google.py  index.py  integrations.py  join_waitlist.py  legal.py  plaid.py  support.py  user_auth.py
static/: input.css  style.css
static/assets/: about.txt
static/scripts/: banking.js  default.js  google.js  home.js  index.js  support.js  utils.js
templates/: not_found.html  root.html
templates/auth/: banking.html  google.html  home.html
templates/components/: background_svg.html  call_to_action.html  sign_in.html
templates/guest/: call_to_action.html  index.html  privacy_policy.html  support.html  support_analytics_insights.html  support_bookkeeping.html  support_financial_reports.html  terms_of_service.html
templates/icons/: icons.html
templates/layout/: auth_layout.html  guest_layout.html
utils/: auth_utils.py  constants.py  context.py  core_utils.py  logger.py  plaid_utils.py  styles.py  tasks.py  types.py  util.py
